Apply Java 14 syntaxes for var and instanceof constructs.
Signed-off-by: Stéphane Galland <galland@arakhne.org>